@@ -47,7 +47,9 @@ echo
 
 echo " > Compiling mlibrary (log will be in "\$MLIBRARY"/build_log )..."
 
-scons $opt $ooarch  LIBRARY="shared" > $MLIBRARY/build_log
+# Temp: forcing max 10 processes as the scons system
+# is based on the existing libraries
+scons -j10 $ooarch > $MLIBRARY/build_log
 
 # Done!
 echo done
