@@ -3,6 +3,9 @@
     .list {display:none; }
 	pre {color: #050;}
 	code {color: #008;}
+	th { color: red; text-align: center;}
+	td { color: #929;  text-align: center;}
+	table {     padding: 15px; border-spacing: 5px;}
     .show {display: none; }
     .hide:target + .show {display: inline; }
     .hide:target {display: none; }
@@ -214,25 +217,33 @@
         If you do, great! The enviroment seems correct and you're ready to run the installation scripts. Every script that you run below will replace the warning log with a successful one.<br>
         Notice: if you already have some existing environment variables that you want to keep,
         use the option "keepmine":<br>
-        <pre><code>
+		<pre><code>
  source $JLAB_ROOT/2.2/ce/jlab.csh keepmine
-        </code></pre>
+		</code></pre>
         
         
         <li>
             Choose the packages you wish to install by executing the corresponding script:
-            <pre><code>
+			<pre><code>
  cd $JLAB_ROOT/2.2/install
 
  ./go_clhep
  ./go_xercesc
+			</code></pre>
 
  If you have a system installation of qt (see instructions on requirements on how to install it):
+ 			<pre><code>
  ./go_qt system
+			</code></pre>
 
- Otherwise the following command will downlowad the qt installer for you. Follow instructions for the installation:
+Otherwise the following command will downlowad the qt installer for you. Follow instructions for the installation:
+
+			<pre><code>
  ./go_qt
+			</code></pre>
+			Continue with the rest of the package installation:
 
+			<pre><code>
  ./go_geant4
  ./go_sconsscript
  ./go_evio
@@ -248,7 +259,34 @@
             
             All the packages listed above "go_gemc" are necessary to run gemc.
         </li>
-    </ol>
+
+<p>Typical installation times:</p>
+<table>
+	<tr>
+		<th>Package</th>
+		<th>Approx Installation Time</th>
+	</tr>
+	<tr> <td>clhep</td> <td>1 minute</td> </tr>
+	<tr> <td>xercesc</td> <td>1 minute</td> </tr>
+	<tr> <td>qt (if system installed)</td> <td>1 second</td> </tr>
+	<tr> <td>qt (if installatin from scratch)</td> <td>15 minutes</td> </tr>
+	<tr> <td>geant4</td> <td>Doe</td> </tr>
+	<tr> <td>sconsscript</td> <td>Doe</td> </tr>
+	<tr> <td>evio</td> <td>Doe</td> </tr>
+	<tr> <td>mysql</td> <td>Doe</td> </tr>
+	<tr> <td>mlibrary</td> <td>Doe</td> </tr>
+	<tr> <td>gemc</td> <td>Doe</td> </tr>
+	<tr> <td>root</td> <td>Doe</td> </tr>
+	<tr> <td>banks</td> <td>Doe</td> </tr>
+	<tr> <td>jana</td> <td>Doe</td> </tr>
+	<tr> <td colspan=2><hr></td> </tr>
+
+	<tr> <td>Total (system qt)</td> <td>Doe</td> </tr>
+	<tr> <td>Total (qt from scratch)</td> <td>Doe</td> </tr>
+
+</table>
+	</ol>
+
     <br><br>
     
 	Please email any comments/corrections/bug report/feature requests to <a href="mailto:ungaro@jlab.org?subject=About%20environment" target="_">Maurizio Ungaro</a>.
