@@ -21,6 +21,10 @@ TO RELEASE:
 - adding local version of mlibrary to release
 - updated instructions
 - a bit of colors in the instructions
+- fixed go_qt endif missing
+- added timing for various packages
+- limiting number of parallel compilation in mlibrary
+- fixed go_banks untarring
 
 3/11/18
 - silencing untar with options instead of redirection
